<resources>
    <string name="app_name">OpenMax-Sklep</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_login">Logowanie</string>

    <string name="str_email_address">Adres Email</string>
    <string name="str_password">Hasło</string>
    <string name="str_reset_password">Przypomnij Hasło</string>
    <string name="str_save_the_label">Zapisz Etykietę</string>
    <string name="str_encrypt_the_label">Szyfruj Etykietę</string>
    <string name="str_read_the_label">Odczytaj Etykietę</string>
    <string name="str_format_the_label">Formatuj Etykietę</string>
    <string name="str_history">Historia</string>
    <string name="str_data_for_recording">Dane do zapisu:</string>
    <string name="str_label_name">Nazwa Etykiety</string>
    <string name="str_product_number">Numer Produktu</string>
    <string name="str_register">Zarejestruj Się</string>
    <string name="str_ogin">Zaloguj</string>
    <string name="str_rejestracja">Rejestracja</string>
    <string name="str_imi">Imię</string>
    <string name="str_potwierdzenie_has_a">Potwierdzenie Hasła</string>
    <string name="str_potwierdzam_e_zapozna_em_si_z_regulaminem_wiadczenia_us_ug_i_zgadzam_si_go_przestrzega">Potwierdzam że zapoznałem się z Regulaminem świadczenia usług i zgadzam się go przestrzegać</string>
    <string name="str_wyra_am_zgod_na_przetwarzanie_danych_w_celach_marketingowych">Wyrażam zgodę na przetwarzanie danych w celach marketingowych</string>
    <string name="str_zarejestruj">Zarejestruj</string>
    <string name="str_resetowanie_has_a">Resetowanie Hasła</string>
    <string name="str_wpisz_sw_j_email">Wpisz Swój Email</string>
    <string name="str_resetuj_has_o">Resetuj Hasło</string>
    <string name="str_by_zresetowa_swoje_has_o_post_puj_zgodnie_z_instrukcj">By zresetować swoje hasło postępuj zgodnie z instrukcją</string>
    <string name="str_wpisz_kod_weryfikacyjny">Wpisz Kod Weryfikacyjny</string>
    <string name="str_wpisz_has_o">Wpisz Hasło</string>
    <string name="str_potwierd_has_o">Potwierdź Hasło</string>
    <string name="str_ustaw_nowe_has_o">Ustaw Nowe Hasło</string>
    <string name="str_enter_valid_password_policy">Enter Valid Passowrd</string>
    <string name="str_enter_valid_email_address">Enter Valid Email Address</string>
    <string name="str_enter_valid_name">Enter Valid Name</string>
    <string name="str_enter_valid_address">Enter Valid Address</string>
    <string name="str_enter_valid_input">Enter Valid Input</string>
    <string name="str_enter_valid_phone">Enter Valid Phone Number</string>
    <string name="str_openmax_pl">openmax.pl/</string>
    <string name="str__5_taske_133_rups">5 taske . 133 Rups</string>
    <string name="str_bedtime_profile">Bedtime profile</string>
    <string name="str_car_profile">Car Profile</string>
    <string name="str_work">Work</string>
    <string name="str_wakdev">Wakdev</string>
    <string name="str_rodzaj_taga_iso_14443_4">Rodzaj taga : ISO 14443-4</string>
    <string name="str_mifare">Mifare</string>
    <string name="str_dostepne_technologie">Dostepne technologie</string>
    <string name="str_type_a_isodep">Type A, IsoDep</string>
    <string name="str_numer_seryjny">Numer seryjny</string>
    <string name="str_9f_b1_1a_00_95_1b_03">9F:B1:1A:00:95:1B:03</string>
    <string name="str_poiemnos">Poiemnosé</string>
    <string name="str_17_baity">17 Baity</string>
    <string name="str_zapisywalny">Zapisywalny</string>
    <string name="str_tak">Tak</string>
    <string name="str_rekord_1_https">Rekord 1 - https://</string>
    <string name="str_visionart_pl">visionart.pl</string>
    <string name="str_write_nfc_dialog">napisz nfc</string>
    <string name="str_enter_the_url_you_want_to_write">Enter the Url you want to write</string>
    <string name="str_write_tag">napisz tag</string>
    <string name="str_write_mode_enabled">Write Mode Disabled</string>
    <string name="str_gotowy_do_skanowania">Gotowy do skanowania</string>
    <string name="str_trzymaj_urzadzenie_w_poblizu_tagu_nfc">Trzymaj urzadzenie w poblizu tagu NFC</string>
    <string name="str_scanned_business_cards">Scanned Business Cards</string>


    <!--    <string name="str_ogin">Login</string>-->
    <!--    <string name="str_register">Register</string>-->
    <!--    <string name="str_product_number">Product Number</string>-->
    <!--    <string name="str_login">Login</string>-->
    <!--    <string name="str_data_for_recording">Data for recording:</string>-->
    <!--    <string name="str_label_name">Label name</string>-->
    <!--    <string name="str_format_the_label">Format the Label</string>-->
    <!--    <string name="str_history">History</string>-->
    <!--    <string name="str_read_the_label">Read the Label</string>-->
    <!--    <string name="str_encrypt_the_label">Encrypt the Label</string>-->
    <!--    <string name="str_save_the_label">Save the Label</string>-->
    <!--    <string name="str_reset_password">Reset Password</string>-->
    <!--    <string name="str_password">Password</string>-->
    <!--    <string name="str_password">Password</string>-->
    <!--    <string name="str_email_address">Email Address</string>-->
</resources>