<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.AboutActivity">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/openmax_icon" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_13sdp"
            android:src="@drawable/ic_back_arrow" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Scanner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/item_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar">

        <ImageView
            android:id="@+id/ivScanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_scanner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvScanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/avenir_black"
            android:text="@string/str_rodzaj_taga_iso_14443_4"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/ivScanner"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvScannerDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_21sdp"
            android:text="@string/str_mifare"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/ivScanner"
            app:layout_constraintTop_toBottomOf="@+id/tvScanner" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/item_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Scanner">

        <ImageView
            android:id="@+id/ivInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/avenir_black"
            android:text="@string/str_dostepne_technologie"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/ivInfo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInfoDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_21sdp"
            android:text="@string/str_type_a_isodep"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/ivInfo"
            app:layout_constraintTop_toBottomOf="@+id/tvInfo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Key"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/item_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Info">

        <ImageView
            android:id="@+id/ivKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_vpn_key"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/avenir_black"
            android:text="@string/str_numer_seryjny"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/ivKey"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvKeyDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_21sdp"
            android:text="@string/str_9f_b1_1a_00_95_1b_03"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/ivKey"
            app:layout_constraintTop_toBottomOf="@+id/tvKey" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Memory"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/item_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Key">

        <ImageView
            android:id="@+id/ivMemory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_memory"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMemory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/avenir_black"
            android:text="@string/str_poiemnos"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/ivMemory"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMemoryDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_21sdp"
            android:text="@string/str_17_baity"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/ivMemory"
            app:layout_constraintTop_toBottomOf="@+id/tvMemory" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ReloadMemory"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/item_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Memory">

        <ImageView
            android:id="@+id/ivReloadMemory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_reload_memorysvg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvReloadMemory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/avenir_black"
            android:text="@string/str_zapisywalny"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/ivReloadMemory"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvReloadMemoryDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_21sdp"
            android:text="@string/str_tak"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/ivReloadMemory"
            app:layout_constraintTop_toBottomOf="@+id/tvReloadMemory" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Chain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/item_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReloadMemory">

        <ImageView
            android:id="@+id/ivChain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/ic_linksvg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvChain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/avenir_black"
            android:text="@string/str_rekord_1_https"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/ivChain"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvChainDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_21sdp"
            android:text="@string/str_visionart_pl"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/ivChain"
            app:layout_constraintTop_toBottomOf="@+id/tvChain" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>