<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.DataActivity">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/openmax_icon" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_13sdp"
            android:src="@drawable/ic_back_arrow" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvDataForRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/semibold"
        android:text="@string/str_data_for_recording"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <TextView
        android:id="@+id/tvWriteModeStatus"
        android:layout_marginTop="@dimen/_40sdp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:textStyle="italic"
        android:fontFamily="@font/medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/str_write_mode_enabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvWriteTag" />

    <RelativeLayout
        android:id="@+id/LabelName"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:background="@drawable/item_bg"
        app:layout_constraintTop_toBottomOf="@+id/tvDataForRecording"
        tools:layout_editor_absoluteX="51dp">

        <TextView
            android:id="@+id/tvLabelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/bold"
            android:text="@string/str_label_name"
            android:textColor="@color/textColor"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ProductNumber"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:background="@drawable/item_bg"
        app:layout_constraintTop_toBottomOf="@+id/LabelName"
        tools:layout_editor_absoluteX="51dp">

        <TextView
            android:id="@+id/tvOpenMax"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/grey_bg"
            android:fontFamily="@font/bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/str_openmax_pl"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etProductNumber"
            android:background="@null"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_toEndOf="@+id/tvOpenMax"
            android:fontFamily="@font/bold"
            android:maxLines="1"
            android:hint="@string/str_product_number"
            android:textColor="@color/textColor"
            android:textSize="14sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/LabelDescription"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:background="@drawable/item_bg"
        app:layout_constraintTop_toBottomOf="@+id/ProductNumber"
        tools:layout_editor_absoluteX="51dp">

        <TextView
            android:id="@+id/tvLabelDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/bold"
            android:text="Opis Etykiety"
            android:textColor="@color/textColor"
            android:textSize="16sp" />
    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvWriteTag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:cornerRadius="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:textColor="#52B5FF"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardBackgroundColor="#52B5FF"
        app:layout_constraintTop_toBottomOf="@+id/LabelDescription">
        <TextView
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/bold"
            android:text="@string/str_save_the_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.card.MaterialCardView>

    <include
        layout="@layout/bottom_sheet"
        android:id="@+id/bottomSheet"
        android:visibility="gone"
        android:elevation="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>